@@ -5,7 +5,7 @@
   <string name="spell_checker_settings">Paramètres du correcteur de AnySoftKeyboard</string>
   <string name="copyright_text">Copyright\u0020©\u0020<xliff:g id="year">%d</xliff:g>\u0020<xliff:g id="owner">%s</xliff:g></string>
   <string name="version_text"><xliff:g id="version_name">%s</xliff:g>\u0020(v<xliff:g id="version_number">%s</xliff:g>)</string>
-  <string name="debug_tracing_starting">Le suivi a commencé !\nS\'assurer de l\'arrêter à un moment donné</string>
+  <string name="debug_tracing_starting">Suivi commencé !\nS\'assurer de l\'arrêter à un moment donné</string>
   <string name="debug_tracing_starting_failed">Échec de l\'initialisation du suivi ! Vérifier le journal pour les détails.</string>
   <string name="debug_tracing_finished">Suivi terminé !\nLe fichier de suivi est
         <xliff:g id="trace_file">%s</xliff:g>
@@ -14,14 +14,13 @@
   <!-- main form -->
   <!-- welcome tab -->
   <string name="how_to_pointer_title">Bienvenue sur AnySoftKeyboard</string>
-  
   <!-- links tab -->
   <string name="change_log_card_version_title_template">\u0020\u0020Dernières modifications pour la v<xliff:g id="name">%s</xliff:g>\u0020\u0020</string>
   <string name="change_log_entry_header_template_without_name">\u0020\u0020v<xliff:g id="code">%s</xliff:g>\u0020\u0020</string>
   <!-- credits tab -->
   <!-- notifications -->
   <string name="ime_name_beta">AnySoftKeyboard BÊTA</string>
-  <string name="notification_text_testers">Il s\'agit d\'une version bêta. À utiliser avec prudence !</string>
+  <string name="notification_text_testers">C\'est une version bêta. À utiliser avec prudence !</string>
   <string name="testers_version">Version d’essai !</string>
   <!-- settings -->
   <string name="languages_cat">Langues</string>
@@ -158,7 +157,7 @@
   <string name="swipe_action_name_cursor_down">Déplacer le curseur vers le bas</string>
   <string name="swipe_action_name_cursor_left">Déplacer le curseur à gauche</string>
   <string name="swipe_action_name_cursor_right">Déplacer le curseur à droite</string>
-  <string name="swipe_action_name_other_keyboards_mode">Changer de disposition de clavier</string>
+  <string name="swipe_action_name_other_keyboards_mode">Changer la disposition du clavier</string>
   <string name="swipe_action_name_split_layout">Scinder le clavier</string>
   <string name="swipe_action_name_merge_layout">Fusionner le clavier</string>
   <string name="swipe_action_name_compact_layout_to_right">Disposition compact à droite</string>
@@ -257,6 +256,9 @@
   <string name="is_sticky_extesion_keyboard">Extension de clavier fixée</string>
   <string name="is_sticky_extesion_keyboard_on_summary">Rester visible jusqu’à fermeture volontaire</string>
   <string name="is_sticky_extesion_keyboard_off_summary">Fermer après pression d’une touche</string>
+  <string name="show_keyboard_icon_in_status_bar_title">Afficher l\'icône sur la barre d\'état</string>
+  <string name="show_keyboard_icon_in_status_bar_on_summary">Afficher l’icône du clavier sur la barre d’état de l\'appareil</string>
+  <string name="show_keyboard_icon_in_status_bar_off_summary">Aucune icône sur la barre d’état</string>
   <string name="is_extesion_keyboard_above_keyboard">Extension haute du clavier</string>
   <string name="is_extesion_keyboard_above_keyboard_on_summary">Dessinée au-dessus du clavier principal</string>
   <string name="is_extesion_keyboard_above_keyboard_off_summary">Dessinée sur le clavier principal</string>
@@ -286,7 +288,7 @@
   <string name="zoom_factor_keys_in_portrait">Ratio de hauteur des touches en mode portrait</string>
   <string name="zoom_factor_keys_in_landscape">Ratio de hauteur des touches en mode paysage</string>
   <string name="insert_space_after_word_suggestion_selection">Espace après choix de suggestion</string>
-  <string name="insert_space_after_word_suggestion_selection_on_summary">Insérer une espace après le mot suggéré sélectionné    </string>
+  <string name="insert_space_after_word_suggestion_selection_on_summary">Insérer un espace après le mot suggéré sélectionné    </string>
   <string name="double_space_to_period">Appui double sur espace devient point espace</string>
   <string name="double_space_to_period_summary">Appui double sur espace pour afficher point+espace</string>
   <string name="tweak_animations_level_title">Animations</string>
@@ -393,7 +395,7 @@
   <string name="label_end_key">Fin</string>
   <string name="change_lang_regular">ABC</string>
   <string name="change_symbols_regular">123</string>
-  <string name="select_keyboard_popup_title">Sélectionnez un clavier</string>
+  <string name="select_keyboard_popup_title">Sélectionner un clavier</string>
   <!-- dictionaries -->
   <string name="eng_dictionary">Anglais</string>
   <string name="simley_key_name">Touche émoticône</string>
@@ -469,7 +471,9 @@
   <string name="user_dict_restore_fail_text_with_error">Échec de la restauration des mots dû à :
         <xliff:g id="error">%s</xliff:g>
     </string>
-  <string name="should_swap_punctuation_and_space_title">Échanger les signes de ponctuation et d\'espace</string>
+  <string name="should_swap_punctuation_and_space_title">Échanger l\'espace et la ponctuation</string>
+  <string name="should_swap_punctuation_and_space_off_summary">Ne pas échanger l\'espace et la ponctuation</string>
+  <string name="should_swap_punctuation_and_space_on_summary">Échanger l\'espace automatique et la ponctuation</string>
   <string name="initial_quick_text_tab_title">Groupe initial</string>
   <string name="initial_quick_text_tab_summary">Commencer avec le groupe de Texte rapide : %s</string>
   <string name="initial_quick_text_tab_always_first_tab">Toujours commencer par le premier</string>
@@ -515,11 +519,14 @@
   <string name="setup_wizard_step_one_details">Dans cette étape, vous devrez activer <i>AnySoftKeyboard</i>. Veuillez cocher <i>\"AnySoftKeyboard\"</i> dans vos paramètres <i>Langue et saisie</i>. Cela nous permettra de fonctionner sur votre appareil.</string>
   <string name="setup_wizard_step_one_action">Aller aux paramètres <i>Langue et saisie</i>…</string>
   <string name="setup_wizard_step_one_action_error_no_settings_activity">Erreur : votre appareil ne gère pas les claviers tiers. AnySoftKeyboard ne peut pas être activé !</string>
+  <string name="setup_wizard_step_permissions_title">Activer les autorisations</string>
+  <string name="wizard_step_this_step_complete_text_permissions"><i>AnySoftKeyboard</i> a accès aux autorisations supplémentaires. Cela vous donnera un niveau supplémentaire de personnalisation.</string>
+  <string name="setup_wizard_step_permissions_details">Dans cette étape, vous pouvez approuver l\'accès de <i>AnySoftKeyboard</i> aux contacts stockés sur votre appareil. Si vous souhaitez bloquer cet accès, vous pouvez désactiver le dictionnaire des contacts.</string>
   <string name="setup_wizard_top_title">Configurer\nAnySoftKeyboard\npour utilisation</string>
   <string name="setup_wizard_step_two_title">Changer pour AnySoftKeyboard</string>
   <string name="setup_wizard_step_two_small_sub_title">Étape deux sur trois</string>
   <string name="setup_wizard_step_two_details">Votre système peut utiliser <i>AnySoftKeyboard</i> maintenant, mais il n\'est pas défini comme le clavier actif.\nAvec le changement, <i>AnySoftKeyboard</i> sera votre nouveau clavier avec toutes ses fonctionnalités !</string>
-  <string name="setup_wizard_step_two_action">Changer de claviers actifs</string>
+  <string name="setup_wizard_step_two_action">Changer de clavier actif</string>
   <string name="setup_wizard_step_three_title">AnySoftKeyboard est prêt !</string>
   <string name="setup_wizard_step_three_details">Merci d\'avoir choisi <i>AnySoftKeyboard</i>.\nCe clavier excelle dans son niveau de personnalisation. Allez-y et personnaliser :</string>
   <string name="setup_wizard_step_three_action_languages">Configurer des langues…</string>
@@ -536,7 +543,6 @@
   <string name="setup_wizard_step_two">Étape deux :</string>
   <string name="setup_wizard_step_three">Étape trois :</string>
   <string name="main_fragment_go_to_settings_button">Aller aux Paramètres</string>
-  
   <string name="accessibility_item_reorder_slider">Curseur pour réordonner les éléments</string>
   <string name="next_word_dict_settings">Paramètres de mot suivant</string>
   <string name="next_word_settings_group">Paramètres</string>
@@ -547,7 +553,7 @@
   <string name="clipboard_paste_entries_title">Choisir le texte à coller</string>
   <string name="next_word_prefs_clear_data">Effacer les données de mot suivant</string>
   <string name="next_word_prefs_clear_data_summary">Ceci est irréversible. Tout l\'historique de frappe va être effacé.</string>
-  <string name="setup_wizard_step_three_action_show_keyboard">Me montrer\nAnySoftKeyboard !</string>
+  <string name="setup_wizard_step_three_action_show_keyboard">Afficher\nAnySoftKeyboard !</string>
   <string name="setup_wizard_step_three_action_go_to_home_fragment">Aller à la page d\'accueil</string>
   <string name="notification_read_contacts_title">Puis-je lire vos contacts ?</string>
   <string name="notification_read_contacts_text">Il faut que je lise vos contacts pour améliorer la fonction d’auto complétion.</string>
@@ -556,4 +562,5 @@
   <string name="allow_permission">Autoriser</string>
   <string name="navigate_to_app_permissions">Aller aux autorisations de l\'application</string>
   <string name="turn_off_contacts_dictionary">Désactiver le dictionnaire des Contacts</string>
+  <string name="read_more_about_permissions">En savoir plus sur les autorisations…</string>
 </resources>
